--- a/dev/app/index.twig
+++ b/dev/app/index.twig
@@ -14,7 +14,7 @@
     <header class="showcase__header">
       <div class="container">
         <div class="showcase__logo">
-          <h1>🎨 Design System</h1>
+          <h1>GO FAST</h1>
         </div>
         <nav class="showcase__nav">
           <a href="#components" class="active">Composants</a>
