--- a/dev/app/page-showcase.twig
+++ b/dev/app/page-showcase.twig
@@ -51,7 +51,7 @@
       </div>
     </div>
 
-    <div class="container">
+    <div class="container showcase_main_container">
       <!-- Preview (rendu visuel) -->
       <div class="page-showcase__preview page-showcase__preview--mobile" id="preview-container">
         <iframe id="preview-iframe" class="page-showcase__iframe"></iframe>
