--- a/dev/assets/scss/showcase/_showcase.scss
+++ b/dev/assets/scss/showcase/_showcase.scss
@@ -58,9 +58,13 @@
       }
     }
   }
-  
+  &_main_container{
+      padding-left: 350px;
+      padding-top: 20px;
+  }
   &__main {
     padding: $spacing-3xl 0;
+    
   }
   
   &__intro {
@@ -111,7 +115,7 @@
 .page-showcase {
   min-height: 100vh;
   background: #f7fafc;
-  padding: 2rem 0;
+  padding: 0;
   padding-top:0;
 
   &__header {
@@ -122,6 +126,9 @@
     position: sticky;
     top: 0;
     z-index: 100;
+    width: 350px;
+    height: 100vh;
+    position: absolute;
   }
 
   &__title {
@@ -198,9 +205,7 @@
   }
 
   &__preview {
-    background: $color-white;
     border-radius: 0.5rem;
-    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
     margin: 0 auto;
     transition: all 0.3s ease;
     overflow: hidden;
@@ -223,7 +228,7 @@
     border: none;
     display: block;
     background: $color-white;
-    height: calc(100vh - 267px);
+    height: calc(100vh - 20px);
     overflow: auto;
   }
 
@@ -281,6 +286,7 @@
 
   // Vue code HTML
   &__code-view {
+    
     display: none;
     background: #1a202c;
     color: #e2e8f0;
