--- a/dev/assets/scss/components/_index.scss
+++ b/dev/assets/scss/components/_index.scss
@@ -1,6 +1,7 @@
 // Fichier généré automatiquement - NE PAS MODIFIER
 // Pour ajouter un composant, créez un fichier .scss dans ce dossier
 
+@use 'badge';
 @use 'button';
 @use 'card';
 @use 'input';
