--- a/dev/assets/scss/style.scss
+++ b/dev/assets/scss/style.scss
@@ -13,6 +13,6 @@
 // Components
 @use 'components/index';
 
-// Showcase (page d'accueil)
-@use 'showcase/showcase';
+// Pages du projet
+@use 'pages/landing';
 
