--- a/app/templates/index.twig
+++ b/app/templates/index.twig
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Design System Showcase</title>
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/showcase.css">
 </head>
 
 <body>
