--- a/dev/pages/index.twig
+++ b/dev/pages/index.twig
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Design System Showcase</title>
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
   <div class="showcase">
@@ -49,6 +49,6 @@
     </main>
   </div>
 
-  <script src="assets/scripts/showcase.js"></script>
+  <script src="../assets/scripts/showcase.js"></script>
 </body>
 </html>
