--- a/dev/pages/page-showcase.twig
+++ b/dev/pages/page-showcase.twig
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Page Showcase - Design System</title>
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
   <div class="page-showcase">
@@ -62,6 +62,6 @@
     </div>
   </div>
 
-  <script src="assets/scripts/page-showcase.js"></script>
+  <script src="../assets/scripts/page-showcase.js"></script>
 </body>
 </html>
