--- a/app/templates/index.twig
+++ b/app/templates/index.twig
@@ -28,7 +28,7 @@
       <div class="container">
         <!-- Intro -->
         <div class="showcase__intro">
-          <h2>Bienvenue dans votre Design System</h2>
+          <h2>Design System</h2>
           <p>Explorez, testez et personnalisez tous vos composants en temps réel</p>
         </div>
 
