--- a/app/styles/showcase/_showcase.scss
+++ b/app/styles/showcase/_showcase.scss
@@ -59,8 +59,10 @@
     }
   }
   &_main_container{
-      padding-left: 350px;
-      padding-top: 20px;
+    padding-left: 350px;
+    max-width: 100%!important;
+    padding-top: 0;
+    padding-right: 0;
   }
   &__main {
     padding: $spacing-3xl 0;
